v3.0
podremos capturar el chat de una plataforma solo con el usuario de la persona. por ejemplo, si escriimos 4everzyanya damos ta y elejimos tiktok y al dar enter nos llevará al en vivo de tiktok de la persona.
el editor de cominaciones se podrá acceder antes del chat como durante el chat.
v2.9
corregido el bug de no poder agregar canales:
*para agregar el canal de youtube necesitas escribir el usuario del canal, seguido de /live. por ejemplo:

www.youtube.com/@4everzyanya/live

corrección de errores: estadísticas y exportación se guardan correctamente. no lo hacían por el nuevo agregado de la sala de juegos.
corrección de errores: el chat debería finalizar correctamente en todas las seciones.
se agrega pestaña eventos. esta pestaña sirve para ignorar cierto tipo de eventos en el programa
se agrega el intentar traducir las actualizaciones con el traductor de google para personas que elijan diferente al español.
v2.8
se agrega soporte para lectura del chat de la sala de juegos, gracias oriol gomez.
v2.71
Se agrega en el menú contextual de un mensaje una opción llamada lista  de URLS. Esto permitirá acceder rápidamente a las urls de los que mandaron el mensaje.
Se agrega nuevo buffer, este se llama mensajes. solo llegan los mensajes de chat, útil para que no se mesclen en la lista general en los en vivos de tiktok.
El conversor de divisas ya está disponible para en vivos en tiktok.
v2.7
se agregan mas datos en las estadísticas del chat si es que el en vivo es de  tiktok.
Se agrega la capacidad de actualizar configuraciones, para corregir errores inesperados en caso de que alguna no esté establecida.
podemos ignorar ciertos eventos del chat. nos dirigimos ha mas opciones, opciones, configuración, y en la categoría eventos.
agregado el poder desactivar la  confirmación al salir.
se corrige la captura de mensajes de twitch y se intenta no capturar información repetida en la lista general.
agregado soporte a tiktok.
se corrigen varios errores menores.